Bug 162279 - regression: "use external editor" doesn't work
Summary: regression: "use external editor" doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-18 22:39 UTC by Will Stephenson
Modified: 2008-06-17 22:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2008-05-18 22:39:03 UTC
Version:            (using Devel)
Installed from:    Compiled sources

The "Use external editor" composer setting never opens an external editor.
Comment 1 FiNeX 2008-05-20 22:02:00 UTC
Which version did you compile? Kmail from trunk?
Comment 2 Thomas McGuire 2008-05-20 22:06:06 UTC
Yes. The external editor part was 'rewritten' and never tested. Guess I've to fix that stuff eventually... Should also affect KNode.
Comment 3 Jakub Stachowski 2008-06-17 22:22:38 UTC
SVN commit 821562 by qbast:

Make external editor work again.

BUG: 162279
BUG: 148743



 M  +73 -6     kmeditor.cpp  
 M  +1 -0      kmeditor.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=821562