Make external editor work again.

BUG: 162279
BUG: 148743


svn path=/trunk/KDE/kdepim/libkdepim/; revision=821562